manifests/secret-dummy-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: secret-sync-dummy-pod
  labels:
    azure.workload.identity/use: "true" # Workload Identity 인증 방식 사용
spec:
  serviceAccountName: secret-dummy-sa   # 관리 ID와 페더레이션 자격 증명이 설정된 서비스어카운트 이름
  containers:
    - name: sync-container
      image: busybox:1.36 # 더미 파드용 가벼운 이미지 사용
      command: ["sh", "-c", "sleep infinity"] # CPU 사용 없이 대기 상태 유지
      resources:
        limits:
          cpu: "10m"
          memory: "16Mi"
        requests:
          cpu: "10m"
          memory: "16Mi"
      volumeMounts:
        - name: secrets-store-inline
          mountPath: "/mnt/secrets-store"
          readOnly: true
  volumes:
    - name: secrets-store-inline
      csi:
        driver: secrets-store.csi.k8s.io
        readOnly: true
        volumeAttributes:
          secretProviderClass: "api-cert-provider" # SecretProviderClass 이름
