manifests/was.yml
# 1. Deployment: Spring 앱 컨테이너의 개수와 이미지 정의
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spring-app
  template:
    metadata:
      labels:
        app: spring-app
    spec:
      containers:
        - name: spring-app
          image: sub4aca-g5g0ezf8e5daejcw.azurecr.io/was:93c424b1e24b88ca60e87e74af5f3739b424b915
          ports:
            - containerPort: 8090
          readinessProbe:
            httpGet:
              path: /board/alive
              port: 8090
            timeoutSeconds: 10
            periodSeconds: 15
---
# 2. Service: ClusterIP로 클러스터 내부 파드로 라우팅
apiVersion: v1
kind: Service
metadata:
  name: spring-app-service
spec:
  type: ClusterIP
  selector:
    app: spring-app
  ports:
    - protocol: TCP
      port: 8090 # 외부에서 접속할 포트
      targetPort: 8090 # 파드 내부로 전달할 포트
