manifests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: was-ingress
  annotations:
    #kubernetes.io/ingress.class: nginx
    kubernetes.io/ingress.class: azure/application-gateway # AGIC 애드온
    appgw.ingress.kubernetes.io/ssl-redirect: "true"
    appgw.ingress.kubernetes.io/appgw-ssl-certificate: "api-cert"
spec:
  # ingressClassName: azure-application-gateway
  tls:
  - hosts:
    - api.tyaz.cloud
    secretName: tyaz
  rules:
  - host: api.tyaz.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: spring-app-service # was service
            port:
              number: 8090 # was service port
